fixed double scroll bar

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -80,21 +80,21 @@ nav ul{
   width: 80%;
   margin: auto;
   margin-top: 3%;
-    color: #D38A8A;
+  color: #D38A8A;
 
 }
 .footer {
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  height: 75px;
-  background: #222;
-  color: #616161;
+position: fixed;
+left: 0px;
+bottom: 0px;
+right: 0px;
+width: 100%;
+height: 75px;
+background: #222;
+color: #616161;
 }
 /************************************************** Center Page **************************************************/
 .theBackGround{
-  overflow-y: auto;
   max-height: 100%;
   height: 100%;
   background-image: url("../images/Backgrounds/Restaurant-Background-icons.png");
@@ -102,8 +102,6 @@ nav ul{
   background-size: 100%;
 }
 .centerPage{
-  overflow-y:auto;
-  height: 100%;
   width: 85%;
   margin: 5%;
   padding: 0 0 0 4%;
@@ -321,7 +319,7 @@ input:hover[type="submit"] {
       width: 20%; height:500px;
     }
     .top{
-	  position: relative;
+      position: relative;
       margin: 10%;
       margin-top: 1%;
       background: linear-gradient(to right, rgba(90, 80, 60, 1) , rgba(17, 90, 12, 0.5));
@@ -347,6 +345,9 @@ input:hover[type="submit"] {
 
     }
     .containerRCB {
+      display: flex;
+      flex-wrap: wrap;
+      border: #000;
 
       width:100%;
       height:100%;
